# map2sdf

./: README.ja.md  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: ci.yml
launch/: map2sdf_demo.launch.py
map2sdf/: __init__.py  cli.py  contours.py  map_io.py  map_node.py  mesher.py  sdf_builder.py  stl_writer.py
test/: test_contours.py  test_flake8.py  test_map_io.py  test_map_node.py  test_mesher.py  test_pep257.py  test_sdf_builder.py
test/maps/: make_sample.py  sample.pgm  sample.yaml
